syntax = "proto3";

option csharp_namespace = "ChatService";

package chat;

service ChatHistory {
  rpc GetChatHistory (GetChatHistoryRequest) returns (GetChatHistoryResponse);
}

message GetChatHistoryRequest {
  string userId = 1;
  string recipientId = 2; // Optional, if null will get all messages for the user
}

message GetChatHistoryResponse {
  repeated ChatMessage messages = 1;
}

message ChatMessage {
  string id = 1;
  string senderId = 2;
  string receiverId = 3;
  string content = 4;
  string timestamp = 5;
  bool isBroadcast = 6;
}